placeholder to message

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="chat-controls">
             <input id="nickname" class="nick-name" type="text" value="Guest"></input>
-            <input id="message" class="message" type="text"></input>
+            <input id="message" placeholder="Type here to chat" class="message" type="text"></input>
             <button id="send" class="send">Send</button>
         </div>
     </div>
